--- a/portfolioFrond/src/app/principal/paginas/portafolio/portafolio.component.html
+++ b/portfolioFrond/src/app/principal/paginas/portafolio/portafolio.component.html
@@ -17,7 +17,7 @@
       <div class="card-footer">
         <div class="container">
           <button *ngIf="userLoginOn" type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="editarTrabajo(trabajo)">Editar</button>
-          <button *ngIf="userLoginOn" type="button" class="btn btn-outline-danger">Eliminar</button>
+          <button *ngIf="userLoginOn" type="button" class="btn btn-outline-danger" (click)="eliminar(trabajo.idCardWock)">Eliminar</button>
           <button *ngIf="!userLoginOn" type="button" class="btn btn-outline-primary">Ver mas</button>
         </div>
       </div>
