--- a/portfolioFrond/src/app/principal/paginas/portafolio/portafolio.component.html
+++ b/portfolioFrond/src/app/principal/paginas/portafolio/portafolio.component.html
@@ -1,6 +1,6 @@
 <div class="globa-container">
   <div style="text-align: center">
-    <button *ngIf="userLoginOn" class="btn btn-info btn-circle btn-xl" style="cursor: pointer"type="button" (click)="nuevoTrabajo()" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <button class="btn btn-info btn-circle btn-xl" style="cursor: pointer"type="button" (click)="nuevoTrabajo()" data-bs-toggle="modal" data-bs-target="#exampleModal">
       <i class="bi bi-plus"></i>
     </button>
   </div>
