comit actualizado para continuar

--- a/portfolioFrond/src/app/administrador/formulario-trabajos/formulario-trabajos.component.html
+++ b/portfolioFrond/src/app/administrador/formulario-trabajos/formulario-trabajos.component.html
@@ -36,6 +36,11 @@
               </div>
             </div>
           </div>
+
+          <div class="form-floating mb-3">
+            <input type="text" class="form-control" id="urlGit" placeholder="url git" formControlName="urlGit" required>
+            <label for="floatingInput">URL GIT</label>
+          </div>
           <hr>
           <div class="contBott">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" style="margin-right: 20px;" (click)="cerrarFormulario()">Cerrar</button>
